cmake_minimum_required(VERSION 3.24)
project(zools2023_xkaderk2)

set(CMAKE_CXX_STANDARD 17)

add_executable(zools2023_xkaderk2 main.cpp Player.h Player.cpp Enemy.h Enemy.cpp Item.h Item.cpp Armor.h Armor.cpp Weapon.h Weapon.cpp Relic.h Relic.cpp Consumable.h Consumable.cpp Ability.h Ability.cpp Punch.h Punch.cpp Kick.h Kick.cpp Slash.h Slash.h.cpp Combat.h Combat.cpp Map.cpp Map.h Tile.cpp Tile.h Floor.cpp Floor.h Door.cpp Door.h Wall.cpp Wall.h EnemyTile.cpp EnemyTile.h ItemTile.cpp ItemTile.h PlayerTile.cpp PlayerTile.h)
